--- a/usuarios/templates/registration/login.html
+++ b/usuarios/templates/registration/login.html
@@ -21,7 +21,7 @@
           {% endif %}
           <div class="d-flex justify-content-between align-items-center">
             <button type="submit" class="btn btn-rumix">Entrar</button>
-            <a href="{% url 'usuarios:register' %}" class="btn btn-link">Criar conta</a>
+           <a href="{% url 'usuarios:register' %}" class="btn-criar">Criar conta</a>
           </div>
         </form>
         <div class="mt-3 text-center">
