--- a/animais/templates/animais/animal_detalhe.html
+++ b/animais/templates/animais/animal_detalhe.html
@@ -7,6 +7,10 @@
     <img src="{{ animal.foto_animal.url }}"
          class="img-fluid rounded mb-3" style="max-height:300px; object-fit:cover;">
   {% endif %}
+  {% if animal.vacinas_animal %}
+  <h3>Vacinas</h3>
+  <img src="{{ animal.vacinas_animal.url }}" class="img-fluid" style="max-height:200px;">
+  {% endif %}
   {% if confirm_delete %}
     <p class="mx-auto" style="max-width:800px;">
       Tem certeza que deseja excluir <strong>{{ animal.nome_animal }}</strong>?
