--- a/animais/templates/animais/animal_form.html
+++ b/animais/templates/animais/animal_form.html
@@ -2,13 +2,15 @@
 {% load crispy_forms_tags %}
 {% block title %}{{ titulo }}{% endblock %}
 {% block content %}
-<h1>{{ titulo }}</h1>
-<form method="post" enctype="multipart/form-data">
-  {% csrf_token %}
-  {{ form|crispy }}
-  <div class="mt-3">
-    <button type="submit" class="btn btn-success">Salvar</button>
-    <a href="{% url 'animais:lista' %}" class="btn btn-secondary">Cancelar</a>
-  </div>
-</form>
+<div class="form-card">
+    <h2>{{ titulo }}</h2>
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <div class="mt-4 d-flex gap-2 justify-content-center">
+            <button type="submit" class="btn-criar">Salvar</button>
+            <a href="{% url 'animais:lista' %}" class="btn btn-outline-secondary">Cancelar</a>
+        </div>
+    </form>
+</div>
 {% endblock %}
