--- a/animais/templates/animais/animal_form.html
+++ b/animais/templates/animais/animal_form.html
@@ -3,14 +3,14 @@
 {% block title %}{{ titulo }}{% endblock %}
 {% block content %}
 <div class="form-card">
-    <h2>{{ titulo }}</h2>
+    <h2 class="text-center">{{ titulo }}</h2>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form|crispy }}
-        <div class="mt-4 d-flex gap-2 justify-content-center">
+        <div class="mt-4 d-flex gap-2 justify-content-center"> 
             <button type="submit" class="btn-criar">Salvar</button>
             <a href="{% url 'animais:lista' %}" class="btn btn-outline-secondary">Cancelar</a>
-        </div>
+        </div>  
     </form>
 </div>
 {% endblock %}
