--- a/rumix/static/css/style.css
+++ b/rumix/static/css/style.css
@@ -61,9 +61,20 @@ body {
     justify-content: center;
 }
 
+.card:not(.perfil-card) img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.card {
+    max-width: 350px;
+}
+
 .perfil-card {
     width: 100%;
-    max-width: 420px;
+    max-width: none !important;
     background-color: var(--bg-card);
     padding: 30px;
     border-radius: 12px;
@@ -72,14 +83,8 @@ body {
     margin: 0 auto;
 }
 
-
 body.dark .perfil-card {
     box-shadow: 0 4px 12px rgba(0,0,0,0.35);
-}
-
-.card img.rounded-circle {
-    display: block;
-    margin: 0 auto !important;
 }
 
 .perfil-nome {
@@ -90,6 +95,17 @@ body.dark .perfil-card {
 .perfil-email {
     margin-bottom: 20px;
     color: var(--text-light);
+}
+
+.perfil-img {
+    width: 140px !important;
+    height: 140px !important;
+    max-width: 140px !important;
+    max-height: 140px !important;
+    object-fit: cover !important;
+    border-radius: 50% !important;
+    display: block !important;
+    margin: 0 auto !important;
 }
 
 .btn-editar-perfil {
@@ -168,7 +184,7 @@ body.dark .perfil-card {
 /* Modo claro */
 body:not(.dark) .btn-entrar,
 body:not(.dark) .btn-rumix {
-  background-color: #0d6efd; /* azul */
+  background-color: #0d6efd;
   color: #fff;
   border: none;
 }
@@ -178,7 +194,7 @@ body:not(.dark) .btn-rumix:hover {
 }
 
 body:not(.dark) .btn-criar {
-  background-color: #198754; /* verde */
+  background-color: #198754;
   color: #fff;
   border: none;
 }
