--- a/rumix/templates/rumix/base.html
+++ b/rumix/templates/rumix/base.html
@@ -18,7 +18,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark p-3 shadow-sm">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="{% url 'rumix:index' %}">
-        <img src="{% static 'css/images/logo.png' %}" alt="Logo Rumix" width="53" height="53" class="me-2">
+        <img src="{% static 'css/images/logo.png' %}" width="53" height="53" class="me-2">
         <span class="title">Rumix</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navegacao">
