--- a/animais/templates/animais/confirmar_exclusao.html
+++ b/animais/templates/animais/confirmar_exclusao.html
@@ -1,5 +1,5 @@
 {% extends "rumix/base.html" %}
-{% block title %}Excluir animal: {{ object.nome_animal }} | Rumix{% endblock %}
+{% block title %}Excluir animal: {{ object.nome_animal }} - Rumix{% endblock %}
 {% block content %}
 <h1>Excluir {{ object.nome_animal }}</h1>
 <p>Tem certeza que deseja excluir este animal?</p>
