--- a/fazendas/templates/fazendas/form.html
+++ b/fazendas/templates/fazendas/form.html
@@ -1,6 +1,6 @@
 {% extends "rumix/base.html" %}
 {% load crispy_forms_tags %}
-{% block title %}{{ titulo }} | Rumix{% endblock %}
+{% block title %}{{ titulo }} - Rumix{% endblock %}
 {% block content %}
 <div class="d-flex justify-content-center mt-5">
     <div class="card shadow p-4" style="width: 100%; max-width: 600px;">
