--- a/rumix/templates/rumix/sobre.html
+++ b/rumix/templates/rumix/sobre.html
@@ -1,6 +1,6 @@
 {% extends "rumix/base.html" %}
 {% load static %}
-{% block title %}Sobre | Rumix{% endblock %}
+{% block title %}Sobre - Rumix{% endblock %}
 {% block content %}
   <section style="text-align:center; padding:2rem;">
     <h1>{{ titulo }}</h1> 
