--- a/usuarios/templates/usuarios/editar.html
+++ b/usuarios/templates/usuarios/editar.html
@@ -1,6 +1,6 @@
 {% extends "rumix/base.html" %}
 {% load crispy_forms_tags %}
-{% block title %}Editar Usuario | Rumix{% endblock %}
+{% block title %}Editar Usuario - Rumix{% endblock %}
 {% block content %}
 <div class="container py-4 d-flex justify-content-center">
     <div class="card shadow p-4" style="width: 100%; max-width: 700px;"> 
