--- a/usuarios/templates/usuarios/perfil.html
+++ b/usuarios/templates/usuarios/perfil.html
@@ -1,6 +1,6 @@
 {% extends "rumix/base.html" %}
 {% load static %}
-{% block title %}Meu Perfil | Rumix{% endblock %}
+{% block title %}Meu Perfil - Rumix{% endblock %}
 {% block content %}
 <div class="container py-4" style="max-width: 600px;">
     <div class="perfil-card shadow-sm p-4 text-center">
