--- a/usuarios/templates/usuarios/register.html
+++ b/usuarios/templates/usuarios/register.html
@@ -1,6 +1,6 @@
 {% extends "rumix/base.html" %}
 {% load crispy_forms_tags %}
-{% block title %}Criar Conta | Rumix{% endblock %}
+{% block title %}Criar Conta - Rumix{% endblock %}
 {% block content %}
 <div class="container py-4" style="max-width:720px;">
   <div class="panel">
