--- a/animais/templates/animais/animais_lista.html
+++ b/animais/templates/animais/animais_lista.html
@@ -1,14 +1,12 @@
 {% extends "rumix/base.html" %}
 {% load crispy_forms_filters %}
-{% block title %}Lista de Animais | Rumix{% endblock %}
+{% block title %}Lista de Animais - Rumix{% endblock %}
 {% block content %}
 <div class="d-flex justify-content-center mt-4">
     <div class="card shadow p-4" style="width: 100%; max-width: 900px;">
         <h1 class="text-center mb-4">Lista de Animais</h1>
         <div class="text-end mb-3">
-            <a href="{% url 'animais:cadastrar' %}" class="btn btn-success">
-                + Cadastrar Novo Animal
-            </a>
+            <a href="{% url 'animais:cadastrar' %}" class="btn btn-success">Cadastrar Novo Animal</a>
         </div>
         <div class="table-responsive">
             <table class="table table-striped align-middle text-center">
@@ -43,9 +41,7 @@
             </table>
         </div>
         <div class="mt-3 text-start">
-            <a href="{% url 'rumix:index' %}" class="btn btn-primary btn-sm">
-                Voltar para Início
-            </a>
+            <a href="{% url 'rumix:index' %}" class="btn btn-primary btn-sm">Voltar para Início</a>
         </div>
     </div>
 </div>
