--- a/fazendas/templates/fazendas/lista.html
+++ b/fazendas/templates/fazendas/lista.html
@@ -1,13 +1,11 @@
 {% extends "rumix/base.html" %}
-{% block title %}Fazendas | Rumix{% endblock %}
+{% block title %}Fazendas - Rumix{% endblock %}
 {% block content %}
 <div class="d-flex justify-content-center mt-4">
     <div class="card shadow p-4" style="width: 100%; max-width: 1100px;">
-        <h1 class="text-center mb-4">Fazendas</h1>
+        <h1 class="text-center mb-4">Fazendas</h1> 
         <div class="text-end mb-3">
-            <a href="{% url 'fazendas:criar' %}" class="btn btn-success">
-                + Nova Fazenda
-            </a>
+            <a href="{% url 'fazendas:criar' %}" class="btn btn-success">Nova Fazenda</a>
         </div>
         <div class="row g-4">
             {% for fazenda in fazendas %}
@@ -21,19 +19,17 @@
                         border-radius: 10px 10px 0 0;
                     ">
                         <img src="{{ fazenda.foto_fazenda.url }}"
-                             class="w-100 h-100"
-                             style="object-fit: cover;">
+                            class="w-100 h-100" 
+                            style="object-fit: cover;">
+                            <!-- ocupar todo espaco força altura e largura a 100 -->
                     </div>
                     {% endif %}
                     <div class="card-body">
                         <h5 class="card-title">{{ fazenda.nome_fazenda }}</h5>
                         <p class="card-text text-muted" style="min-height: 50px;">
-                            {{ fazenda.sobre_fazenda|truncatechars:120 }}
+                            {{ fazenda.sobre_fazenda|truncatechars:120 }}<!-- limitar a 120  -->
                         </p>
-                        <a href="{% url 'fazendas:detalhe' fazenda.id %}"
-                           class="btn btn-primary btn-sm mt-2">
-                            Ver Detalhes
-                        </a>
+                        <a href="{% url 'fazendas:detalhe' fazenda.id %}" class="btn btn-primary btn-sm mt-2">Ver Detalhes</a>
                     </div>
                 </div>
             </div>
@@ -41,7 +37,6 @@
             <p class="text-center">Nenhuma fazenda cadastrada.</p>
             {% endfor %}
         </div>
-
     </div>
 </div>
 {% endblock %}
