--- a/usuarios/templates/registration/password_reset_complete.html
+++ b/usuarios/templates/registration/password_reset_complete.html
@@ -2,7 +2,7 @@
 {% block title %}Autenticação - Rumix{% endblock %}
 {% block content %}
 <div class="text-center">
-  <h4 class="mb-3">Feito.</h4>
+  <p class="text-muted">Feito.</p>
   <a href="{% url 'rumix:index' %}" class="btn btn-success">Ir para o início</a>
 </div>
 {% endblock %}
