--- a/usuarios/templates/registration/register.html
+++ b/usuarios/templates/registration/register.html
@@ -1,6 +1,6 @@
 {% extends "rumix/base.html" %}
 {% load crispy_forms_tags %}
-{% block title %}Criar Conta | Rumix{% endblock %}
+{% block title %}Criar Conta - Rumix{% endblock %}
 {% block content %}
 <div class="row justify-content-center">
   <div class="col-md-7 col-lg-6">
