--- a/usuarios/templates/usuarios/editar_perfil.html
+++ b/usuarios/templates/usuarios/editar_perfil.html
@@ -1,6 +1,6 @@
 {% extends "rumix/base.html" %}
 {% load crispy_forms_tags %}
-{% block title %}Editar Perfil | Rumix{% endblock %}
+{% block title %}Editar Perfil - Rumix{% endblock %}
 {% block content %}
 <section class="container py-5" style="max-width:500px;">
     <div class="card shadow-sm p-4 form-card">
@@ -9,12 +9,8 @@
             {% csrf_token %}
             {{ form|crispy }}
             <div class="text-center mt-4">
-                <button type="submit" class="btn btn-criar">
-                    Salvar
-                </button>
-                <a href="{% url 'usuarios:perfil' %}" class="btn btn-outline-secondary ms-2">
-                    Cancelar
-                </a>
+                <button type="submit" class="btn btn-criar">Salvar</button>
+                <a href="{% url 'usuarios:perfil' %}" class="btn btn-outline-secondary ms-2">Cancelar</a>
             </div>
         </form>
     </div>
