--- a/usuarios/templates/usuarios/novo_usuario.html
+++ b/usuarios/templates/usuarios/novo_usuario.html
@@ -1,15 +1,12 @@
 {% extends "rumix/base.html" %}
 {% load crispy_forms_tags %}
-{% block title %}Novo Usuario | Rumix{% endblock %}
-
+{% block title %}Novo Usuario - Rumix{% endblock %}
 {% block content %}
 <div class="card form-card shadow-sm mt-4">
     <h2 class="mb-3">Cadastrar Usuário</h2>
-
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form|crispy }}
-
         <div class="mt-3 d-flex justify-content-center gap-2">
             <button class="btn btn-success">Salvar</button>
             <a href="{% url 'usuarios:usuarios' %}" class="btn btn-secondary">Cancelar</a>
