--- a/usuarios/templates/usuarios/remover.html
+++ b/usuarios/templates/usuarios/remover.html
@@ -1,5 +1,5 @@
 {% extends "rumix/base.html" %}
-{% block title %}Remover Usuario | Rumix{% endblock %}
+{% block title %}Remover Usuario - Rumix{% endblock %}
 {% block content %}
 <h1>Remover {{ object.get_full_name|default:object.username }}</h1>
 <p>Tem certeza?</p>
